--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Applications</title>
 	    <link rel = "stylesheet" type = "text/css" href = "style/style.css"></link>
-		<script src ="script/libs/jquery-2.1.1.min.js"></script>
+		<script src ="script/libs/jquery-3.1.1.js"></script>
 		<script src="script/libs/underscore-min.js"></script>
 		<script src="script/libs/backbone-min.js"></script>
 	    <script src="script/libs/mediator.js"></script>
